# markello_spatialnulls

./: .gitignore  .zenodo.json  Makefile  README.md  environment.yml  index.html  netlify.toml  setup.cfg
container/: README.md  Singularity  gen_simg.sh
data/: README.md
manuscript/: main.tex  refs.bib
parspin/: LICENSE  README.md  setup.cfg  setup.py
parspin/parspin/: burt.py  partitions.py  plotting.py  simnulls.py  spatial.py  surface.py  surrogates.py  utils.py
scripts/: README.md
scripts/01_preprocess/: fetch_neurosynth_maps.py
scripts/02_analysis/: generate_hcp_surrogates.py  generate_simulations.py  generate_spin_resamples.py  get_geodesic_distance.py
scripts/03_results/: batch_simulated_nulls.py  calc_moran.py  calc_simcorrs.py  combine_moran_outputs.py  combine_simnulls_outputs.py  run_hcp_nulls.py  run_neurosynth_nulls.py  run_simulated_nulls.py  run_simulated_nulls_parallel.py  run_simulated_nulls_serial.py  simulated_pvals.py
scripts/04_visualization/: viz_hcp_analysis.py  viz_hcp_networks.py  viz_hcp_nulls.py  viz_neurosynth_analysis.py  viz_neurosynth_nulls.py  viz_perms.py  viz_simulation_examples.py  viz_simulation_results.py
scripts/05_supplementary/: compare_comptime.py  compare_duplicate_assign.py  compare_geodesic_travel.py  compare_nnulls.py  compare_spin_resamples.py
scripts/empirical/: fetch_hcp_myelin.py  run_hcp_nulls.py  (+3 more)
walkthrough/: Makefile  README.md  accessing_data.md  conf.py  empirical.md  index.md  main_results.md  preprocessing.md  recommendations.md  requirements.txt  setting_up.md  simulations.md  spatial_nulls.md
(+14 files in other folders)
